src/objects/Project__c.object
<CustomObject>
    <description>Used for internal Project tracking</description>
    <fields>
        <fullName>Advisory_Team_Member_s__c</fullName>
        <label>Advisory Team Member(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>When project is ready for approval and prioritization please mark as Ready for Approval and the project will be taken up for review</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready For Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <description>Enter a description of the background of the project</description>
        <inlineHelpText>Enter a description of the background of the project</inlineHelpText>
        <label>Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blackout_Week_End_Date__c</fullName>
        <description>This field indicates when the Blackout Week ends</description>
        <inlineHelpText>This field indicates when the Blackout Week ends</inlineHelpText>
        <label>Blackout Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blackout_Week_Start_Date__c</fullName>
        <description>This field indicates when the blackout week starts</description>
        <inlineHelpText>This field indicates when the blackout week starts</inlineHelpText>
        <label>Blackout Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Required__c</fullName>
        <inlineHelpText>Add if any additional capital is required to complete project - e.g. consultants, licenses</inlineHelpText>
        <label>Capital Required ($)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Short_Description__c</fullName>
        <inlineHelpText>Add short notes about for what the capital is needed.</inlineHelpText>
        <label>Capital Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add the main country to which this project relates if applicable (at this point designed as only possible to relate to one Country per project, potentially needs to be reviewed if multiple countries is a requirement)</description>
        <inlineHelpText>Add the main country to which this project relates if applicable</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DECIDE_TO_BUY_DATA_COM_INFO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decided to buy Data.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Level_Descript__c</fullName>
        <formula>if( 
 Deployment_Level_Description__c =1, &quot;Business Orientation&quot;,
if( 
Deployment_Level_Description__c =2,&quot;Start-up&quot;, 

if( 
Deployment_Level_Description__c =3,&quot;Training&quot;,

if( 
Deployment_Level_Description__c =4,&quot;Live&quot;,&quot;Not Started&quot;))))</formula>
        <label>Deployment Level Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Level_Description__c</fullName>
        <formula>if( 

or( 
text( Phase__c )=&quot;Deployment Initiation&quot;, text(Phase__c)=&quot;Business Orientation&quot;), 1, 

if( 
text(Phase__c)=&quot;Start-up &amp; Design&quot;, 2, 

if( 
and(text(Phase__c)=&quot;Training &amp; GO-Live&quot;, Go_Live_date__c &gt; TODAY()), 3, 

if( Go_Live_date__c &lt;= TODAY(),4,0))))</formula>
        <label>Deployment Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Strategy__c</fullName>
        <label>Deployment Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Only (provide training material)</fullName>
                </value>
                <value>
                    <fullName>Local Deployment Projects (managed by Global CRM)</fullName>
                </value>
                <value>
                    <fullName>Global Release - Big Bang forced on all users</fullName>
                </value>
                <value>
                    <fullName>Global Release - Phased deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_notes__c</fullName>
        <label>Deployment notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Depoloyment_Scope__c</fullName>
        <label>Depoloyment Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional (RCO)</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the project that proceeded this Deployment if such exist</inlineHelpText>
        <label>Development Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Design &amp; Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Related or Child Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_learning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_learning_status__c</fullName>
        <label>E-learning status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>After HyperCare month</description>
        <inlineHelpText>After HyperCare month</inlineHelpText>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>For_Management_Attention__c</fullName>
        <inlineHelpText>Add any notes of importance for management attention &amp; support</inlineHelpText>
        <label>For Management Attention</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_date__c</fullName>
        <description>When Users will have access to PROD</description>
        <inlineHelpText>When Users will have access to PROD</inlineHelpText>
        <label>Go Live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiator_role_info__c</fullName>
        <description>Add information about the initiator - e.g. RCO leader in US, Country Manager in or other relevant information</description>
        <inlineHelpText>Add information about the initiator - e.g. RCO leader in US, Country Manager in or other relevant information</inlineHelpText>
        <label>Initiator role/info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intended_Start_Date__c</fullName>
        <inlineHelpText>An intended start date for roadmap planning. Note that this is not an official start date but for high level intentions and planning. For defined dates please see Start and End Date</inlineHelpText>
        <label>Intended Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2020 - Q1</fullName>
                </value>
                <value>
                    <fullName>2020 - Q2</fullName>
                </value>
                <value>
                    <fullName>2020 - Q3</fullName>
                </value>
                <value>
                    <fullName>2020 - Q4</fullName>
                </value>
                <value>
                    <fullName>2021 - Q1</fullName>
                </value>
                <value>
                    <fullName>2021 - Q2</fullName>
                </value>
                <value>
                    <fullName>2021 - Q3</fullName>
                </value>
                <value>
                    <fullName>2021 - Q4</fullName>
                </value>
                <value>
                    <fullName>2022 - Q1</fullName>
                </value>
                <value>
                    <fullName>2022 - Q2</fullName>
                </value>
                <value>
                    <fullName>2022 - Q3</fullName>
                </value>
                <value>
                    <fullName>2022 - Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_To_Microsoft_Teams__c</fullName>
        <label>Link To Microsoft Teams</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Technical_Document__c</fullName>
        <label>Link to Technical Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MainProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Workstreams</relationshipLabel>
        <relationshipName>Workstream</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_New_Licenses__c</fullName>
        <description>This field indicates the total amoutn of new Salesforce Licenses</description>
        <inlineHelpText>This field indicates the total amoutn of new Salesforce Licenses</inlineHelpText>
        <label># of New Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Marketing_Modules__c</fullName>
        <label>ONE SFDC Marketing Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Marketing_Modules</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Marketing_Platform__c</fullName>
        <label>ONE SFDC Marketing Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Marketing_Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Sales_Modules__c</fullName>
        <label>ONE SFDC Sales Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Sales_Modules</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Sales_Platform__c</fullName>
        <label>ONE SFDC Sales Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Marketing_Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_scope__c</fullName>
        <inlineHelpText>Enter anything related to the project that is decided not to be included in the project scope (e.g. integrations will not be covered)</inlineHelpText>
        <label>Out of scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPT_status__c</fullName>
        <label>PPT status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPT_training_guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPT training guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <inlineHelpText>Phasing of a project, phase 0 is before project start and kick off</inlineHelpText>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Deployment Initiation</fullName>
                </value>
                <value>
                    <fullName>Business Orientation</fullName>
                </value>
                <value>
                    <fullName>Start-up &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Training &amp; GO-Live</fullName>
                </value>
                <value>
                    <fullName>Improve &amp; Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Project Initiation</fullName>
                </value>
                <value>
                    <fullName>Business Requirement Gathering</fullName>
                </value>
                <value>
                    <fullName>Conceptual Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Testing</fullName>
                </value>
                <value>
                    <fullName>Document and Training Material</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Life Cycle Management</fullName>
                </value>
                <value>
                    <fullName>0 - Project Scoping</fullName>
                </value>
                <value>
                    <fullName>1 - Discovery/Gap Analysis</fullName>
                </value>
                <value>
                    <fullName>2 - Requirements Gathering</fullName>
                </value>
                <value>
                    <fullName>3 - Development and Data Management</fullName>
                </value>
                <value>
                    <fullName>4 - Testing, revisions and sign off</fullName>
                </value>
                <value>
                    <fullName>5 - Readiness and Training Prep</fullName>
                </value>
                <value>
                    <fullName>6 - Go Live and Hyper Care</fullName>
                </value>
                <value>
                    <fullName>7 - Follow up/Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_first_Go_Live_date__c</fullName>
        <inlineHelpText>Add the planned first go live date</inlineHelpText>
        <label>Planned first Go-Live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>BI-Wave</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>FSL</fullName>
                </value>
                <value>
                    <fullName>CIM360</fullName>
                </value>
                <value>
                    <fullName>GDW/ETL Integrations</fullName>
                </value>
                <value>
                    <fullName>Other Integrations</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics</fullName>
                </value>
                <value>
                    <fullName>Dealer Sell Out data</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>KOL/Clinical Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <description>Used to track which projects are done for the foundation, global setup and which are done specifically for a region or SBU</description>
        <inlineHelpText>Used to track which projects are done for the foundation, global setup and which are done specifically for a region or SBU</inlineHelpText>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>SBU</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Dependencies__c</fullName>
        <description>Used to track dependencies on other teams and projects. Idea is that we should be able to detect if we are heavily dependent upon other teams to assure resources and a good collaboration.</description>
        <inlineHelpText>Used to track dependencies on other teams and projects. Idea is that we should be able to detect if we are heavily dependent upon other teams to assure resources and a good collaboration.</inlineHelpText>
        <label>Project Dependencies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Global Website</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>CIM - Customer Identity Management</fullName>
                </value>
                <value>
                    <fullName>GSP - Dealer Data</fullName>
                </value>
                <value>
                    <fullName>Local System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Documents__c</fullName>
        <description>Used to add a link to where project documents are stored</description>
        <inlineHelpText>Add link to project documents</inlineHelpText>
        <label>Project Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Initiator__c</fullName>
        <description>Initiator from Country/Region</description>
        <inlineHelpText>Initiator from Country/Region</inlineHelpText>
        <label>Project Initiator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <inlineHelpText>Place to put project related notes that should be kept and/or shared with other people looking at the project</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <inlineHelpText>Enter the scope of the project - what is included</inlineHelpText>
        <label>Project Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <description>Small:
- Limited team involvement.
- No additional capital required.
Medium:
- CRM Team and other Partner involvement/coordination.
- No additional capital required.
- Project Coordinator needed
Large:
- CRM Team and other Partner involvement / coordination.
- Capital required.
- Steer Co required.
- Project coordinator is needed.</description>
        <inlineHelpText>Small:
- Limited team involvement.
- No additional capital required.
Medium:
- CRM Team and other Partner involvement/coordination.
- No additional capital required.
- Project Coordinator needed
Large:
- CRM Team and other Partner involvement / coordination.
- Capital required.
- Steer Co required.
- Project coordinator is needed.</inlineHelpText>
        <label>Project Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Sponsor_s__c</fullName>
        <label>Project Sponsor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>On Roadmap - Discussed but not approved and/or without a defined start date and resources assigned. 
In Planning – Approved, start date set and resources assigned but not started.
In Progress - In progress
Green – No worries and project runs according to plan
Red – Large risk of negative impact on project success (scope, time, functionality, value)
Paused - Stopped on waiting for approval, paused for restart require approval. Project is officially Paused, and means resources assigned and plans has been withdrawn. Project still needed but will require a restart and new resources and dates to be set.
Completed – project is fully done and closed. Project closure evaluation and documentation is completed. 
Cancelled – Project fully cancelled and is no longer needed.</description>
        <inlineHelpText>On Roadmap - Discussed but not approved and/or without a defined start date and resources assigned.
In Planning – Approved, start date set and resources assigned but not started.
In Progress - In progress
Green – No worries and project runs according to plan
Red – Large risk of negative impact on project success (scope, time, functionality, value)
Paused - Stopped on waiting for approval, paused for restart require approval. Project is officially Paused, and means resources assigned and plans has be</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For Consideration</fullName>
                    <default>true</default>
                    <label>For Consideration</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                    <label>On RoadMap</label>
                </value>
                <value>
                    <fullName>In Planning</fullName>
                </value>
                <value>
                    <fullName>In Progress - Green On Track</fullName>
                    <label>In Progress - Green</label>
                </value>
                <value>
                    <fullName>In Progress - Yellow - At Risk</fullName>
                    <label>In Progress - Yellow</label>
                </value>
                <value>
                    <fullName>In Progress - Red - Delayed</fullName>
                    <label>In Progress - Red</label>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Ready To Start</fullName>
                    <isActive>false</isActive>
                    <label>Not Ready To Start</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <isActive>false</isActive>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Ready To Start</fullName>
                    <isActive>false</isActive>
                    <label>Ready To Start</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCO_SBU_Specific__c</fullName>
        <label>RCO/SBU Specific</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RCO_SBU_Specific</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>Add the start date of the project</description>
        <inlineHelpText>Add the start date of the project</inlineHelpText>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <inlineHelpText>Add details regarding the reason for the status selected</inlineHelpText>
        <label>Status Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Go_Live_Date__c</fullName>
        <description>This field indicates the date when the go live is.</description>
        <inlineHelpText>This field indicates the date when the go live is.</inlineHelpText>
        <label>Technical Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date_CRM_Analyst__c</fullName>
        <label>Training Date (CRM Analyst)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date_End_User__c</fullName>
        <label>Training Date (End User)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_Tutorial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Tutorial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_status__c</fullName>
        <label>Video status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WILLING_TO_TAKE_LMS_TRANSLATION_COST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willing to take LMS translation costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_new_licenses_needed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Add the number of new licenses that the country will require for this deployment</description>
        <inlineHelpText>Add the number of new licenses that the country will require for this deployment</inlineHelpText>
        <label># of new licenses needed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Open_Projcts</fullName>
        <columns>Project_Size__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Country__c</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Deployment,Project__c.Design_Development</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>For Consideration,In Planning,Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Number_Of_New_Licenses__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Open Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Project_Category__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Go_Live_date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Deployment,Project__c.Design_Development</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>